--- a/PlanetWallet/Views/4_Main/Popups/BottomMenuView.xib
+++ b/PlanetWallet/Views/4_Main/Popups/BottomMenuView.xib
@@ -23,7 +23,6 @@
             <connections>
                 <outlet property="addressLb" destination="eWq-yd-qWQ" id="ZdS-dg-ogK"/>
                 <outlet property="amountLb" destination="GEP-Ga-2w6" id="ue1-oc-gnU"/>
-                <outlet property="coinTypeLb" destination="VuS-nB-thM" id="PZ5-Qz-yft"/>
                 <outlet property="containerView" destination="iN0-l3-epB" id="K86-P6-J2M"/>
                 <outlet property="planetView" destination="DIY-Nd-ckh" id="c3D-2L-0ML"/>
                 <outlet property="qrCodeImgView" destination="dH5-t7-0zN" id="ekX-XD-FGx"/>
@@ -31,7 +30,7 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="440"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="472"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Uqq-e7-WuN" customClass="PWView" customModule="PlanetWallet" customModuleProvider="target">
@@ -183,36 +182,25 @@
                         <action selector="didTouchedSend:" destination="-1" eventType="touchUpInside" id="ZES-U8-83D"/>
                     </connections>
                 </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3Gvgi1WpEZ73CNmQviecrnyiWrnqRhjJm1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eWq-yd-qWQ">
-                    <rect key="frame" x="48.5" y="304" width="278" height="20.5"/>
-                    <fontDescription key="fontDescription" name="WorkSans-Regular" family="Work Sans" pointSize="14"/>
-                    <color key="textColor" name="errorText"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rigel-III" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GEP-Ga-2w6">
+                    <rect key="frame" x="153" y="270" width="69" height="26.5"/>
+                    <fontDescription key="fontDescription" name="WorkSans-SemiBold" family="Work Sans" pointSize="18"/>
+                    <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <stackView opaque="NO" contentMode="scaleToFill" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="nfa-5A-LJz">
-                    <rect key="frame" x="81.5" y="260" width="212.5" height="35"/>
-                    <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="13.9131248719" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GEP-Ga-2w6">
-                            <rect key="frame" x="0.0" y="0.0" width="162" height="35"/>
-                            <fontDescription key="fontDescription" name="WorkSans-SemiBold" family="Work Sans" pointSize="24"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BTC" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VuS-nB-thM">
-                            <rect key="frame" x="165" y="0.0" width="47.5" height="35"/>
-                            <fontDescription key="fontDescription" name="WorkSans-SemiBold" family="Work Sans" pointSize="24"/>
-                            <color key="textColor" name="detailTextLight"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                    </subviews>
-                </stackView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3Gvgi1WpEZ73CNmQviecrnyiWrnqRhjJm1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eWq-yd-qWQ">
+                    <rect key="frame" x="48.5" y="306.5" width="278" height="20.5"/>
+                    <fontDescription key="fontDescription" name="WorkSans-Regular" family="Work Sans" pointSize="14"/>
+                    <color key="textColor" name="textFieldBgDark"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="rFL-SS-FXo" secondAttribute="bottom" constant="35" id="026-5X-joD"/>
+                <constraint firstItem="eWq-yd-qWQ" firstAttribute="top" secondItem="GEP-Ga-2w6" secondAttribute="bottom" constant="10" id="2LX-eC-MmK"/>
                 <constraint firstItem="eWq-yd-qWQ" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="7OM-NU-g4y"/>
                 <constraint firstAttribute="trailing" secondItem="rFL-SS-FXo" secondAttribute="trailing" constant="192" id="ARg-2P-CFV"/>
-                <constraint firstItem="eWq-yd-qWQ" firstAttribute="top" secondItem="nfa-5A-LJz" secondAttribute="bottom" constant="9" id="E0F-4d-WcF"/>
                 <constraint firstAttribute="centerX" secondItem="rFL-SS-FXo" secondAttribute="trailing" constant="5" id="Gij-bc-Ris"/>
                 <constraint firstItem="aH8-wJ-w2O" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="centerX" constant="5" id="IQa-Z9-gzG"/>
                 <constraint firstItem="Uqq-e7-WuN" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="16" id="NzX-fR-6A1"/>
@@ -220,11 +208,11 @@
                 <constraint firstItem="rFL-SS-FXo" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="351" id="RBD-DB-zGp"/>
                 <constraint firstItem="aH8-wJ-w2O" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="351" id="Vjj-0V-nWE"/>
                 <constraint firstItem="4f0-iG-Q2C" firstAttribute="top" secondItem="Uqq-e7-WuN" secondAttribute="bottom" constant="30" id="cgk-xn-izv"/>
+                <constraint firstItem="GEP-Ga-2w6" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="eHb-fj-YdE"/>
+                <constraint firstItem="GEP-Ga-2w6" firstAttribute="top" secondItem="4f0-iG-Q2C" secondAttribute="bottom" constant="40" id="ery-rB-k3A"/>
                 <constraint firstAttribute="trailing" secondItem="aH8-wJ-w2O" secondAttribute="trailing" constant="20" id="k22-if-6Hp"/>
                 <constraint firstItem="Uqq-e7-WuN" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="kea-e4-zwL"/>
-                <constraint firstItem="nfa-5A-LJz" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="qcX-Vy-bmP"/>
                 <constraint firstItem="rFL-SS-FXo" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="uzy-4J-jxD"/>
-                <constraint firstItem="nfa-5A-LJz" firstAttribute="top" secondItem="4f0-iG-Q2C" secondAttribute="bottom" constant="30" id="wLD-Gq-Dcp"/>
                 <constraint firstItem="4f0-iG-Q2C" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="wos-wk-zTH"/>
             </constraints>
             <nil key="simulatedTopBarMetrics"/>
@@ -242,11 +230,8 @@
         </view>
     </objects>
     <resources>
-        <namedColor name="detailTextLight">
-            <color red="0.66666666666666663" green="0.66666666666666663" blue="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="errorText">
-            <color red="1" green="0.0" blue="0.31372549019607843" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <namedColor name="textFieldBgDark">
+            <color red="0.066666666666666666" green="0.066666666666666666" blue="0.090196078431372548" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
