--- a/PlanetWallet/Views/4_Main/Cells/BTCTransactionCell.xib
+++ b/PlanetWallet/Views/4_Main/Cells/BTCTransactionCell.xib
@@ -24,8 +24,8 @@
                 <outlet property="amountLb" destination="hAH-Qc-E6F" id="N1n-jd-0Uk"/>
                 <outlet property="containerView" destination="iN0-l3-epB" id="EZW-45-JzR"/>
                 <outlet property="dateLb" destination="auQ-eI-Xio" id="MCW-0S-AYw"/>
+                <outlet property="directionImgView" destination="g9F-D7-tum" id="ifz-wa-WeM"/>
                 <outlet property="planetNameLb" destination="YmR-rS-YJs" id="z3n-FZ-Iil"/>
-                <outlet property="upDownImgView" destination="g9F-D7-tum" id="ifz-wa-WeM"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -41,12 +41,22 @@
                             <fontDescription key="fontDescription" name="WorkSans-Medium" family="Work Sans" pointSize="16"/>
                             <color key="textColor" name="textColorDark"/>
                             <nil key="highlightedColor"/>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="color" keyPath="themeTextColor">
+                                    <color key="value" name="textColorLight"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="April 13, 11:40" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="auQ-eI-Xio" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="23.5" width="90" height="20.5"/>
                             <fontDescription key="fontDescription" name="WorkSans-Regular" family="Work Sans" pointSize="14"/>
                             <color key="textColor" name="detailTextDark"/>
                             <nil key="highlightedColor"/>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="color" keyPath="themeTextColor">
+                                    <color key="value" name="detailTextLight"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
                         </label>
                     </subviews>
                 </stackView>
@@ -64,12 +74,22 @@
                                     <fontDescription key="fontDescription" name="WorkSans-Regular" family="Work Sans" pointSize="14"/>
                                     <color key="textColor" name="textColorDark"/>
                                     <nil key="highlightedColor"/>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="color" keyPath="themeTextColor">
+                                            <color key="value" name="textColorLight"/>
+                                        </userDefinedRuntimeAttribute>
+                                    </userDefinedRuntimeAttributes>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BTC" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OlI-MA-u65" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
                                     <rect key="frame" x="72" y="0.0" width="27" height="20.5"/>
                                     <fontDescription key="fontDescription" name="WorkSans-Regular" family="Work Sans" pointSize="14"/>
                                     <color key="textColor" name="detailTextDark"/>
                                     <nil key="highlightedColor"/>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="color" keyPath="themeTextColor">
+                                            <color key="value" name="detailTextLight"/>
+                                        </userDefinedRuntimeAttribute>
+                                    </userDefinedRuntimeAttributes>
                                 </label>
                             </subviews>
                         </stackView>
@@ -93,8 +113,14 @@
         <namedColor name="detailTextDark">
             <color red="0.36078431372549019" green="0.34901960784313724" blue="0.39215686274509803" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <namedColor name="detailTextLight">
+            <color red="0.66666666666666663" green="0.66666666666666663" blue="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="textColorDark">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="textColorLight">
+            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
