--- a/PlanetWallet/Resources/6_Transfer.storyboard
+++ b/PlanetWallet/Resources/6_Transfer.storyboard
@@ -6,15 +6,21 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="WorkSans-Bold.otf">
+            <string>WorkSans-Bold</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--Transfer Controller-->
         <scene sceneID="WQn-ho-bBx">
             <objects>
                 <viewController storyboardIdentifier="TransferController" id="ETN-79-SLg" customClass="TransferController" customModule="PlanetWallet" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Vih-Oq-YH4">
+                    <view key="view" contentMode="scaleToFill" id="Vih-Oq-YH4" customClass="PWView" customModule="PlanetWallet" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
@@ -32,20 +38,58 @@
                                     <action selector="didTouched:" destination="ETN-79-SLg" eventType="touchUpInside" id="MJj-Gk-LbO"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0x234balkjdfasnlv2141as2" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u88-ZK-LQr" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
+                                <rect key="frame" x="97" y="393" width="220" height="25"/>
+                                <fontDescription key="fontDescription" name="WorkSans-Bold" family="Work Sans" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="themeTextColor">
+                                        <color key="value" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </label>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="syD-cF-zbz" customClass="PWSlider" customModule="PlanetWallet" customModuleProvider="target">
+                                <rect key="frame" x="105" y="343" width="204" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="Oyv-3C-GW6"/>
+                                </constraints>
+                                <color key="minimumTrackTintColor" name="errorText"/>
+                                <color key="maximumTrackTintColor" red="0.92941176470588238" green="0.92941176470588238" blue="0.92941176470588238" alpha="0.84705882352941175" colorSpace="calibratedRGB"/>
+                                <color key="thumbTintColor" name="errorText"/>
+                            </slider>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="mfy-eO-enm" firstAttribute="centerY" secondItem="Vih-Oq-YH4" secondAttribute="centerY" id="8cA-4C-ogp"/>
                             <constraint firstItem="mfy-eO-enm" firstAttribute="centerX" secondItem="Vih-Oq-YH4" secondAttribute="centerX" id="DTt-kW-Eo7"/>
+                            <constraint firstItem="u88-ZK-LQr" firstAttribute="centerX" secondItem="Vih-Oq-YH4" secondAttribute="centerX" id="NIY-6l-UPo"/>
                             <constraint firstItem="kYp-NC-cRy" firstAttribute="centerX" secondItem="Vih-Oq-YH4" secondAttribute="centerX" id="Qsf-I9-0T0"/>
+                            <constraint firstItem="syD-cF-zbz" firstAttribute="centerX" secondItem="Vih-Oq-YH4" secondAttribute="centerX" id="hzO-ok-YU7"/>
                             <constraint firstItem="kYp-NC-cRy" firstAttribute="top" secondItem="mfy-eO-enm" secondAttribute="bottom" constant="60" id="n82-ye-6hr"/>
+                            <constraint firstItem="mfy-eO-enm" firstAttribute="top" secondItem="u88-ZK-LQr" secondAttribute="bottom" constant="15" id="txJ-Gw-Yxs"/>
+                            <constraint firstItem="u88-ZK-LQr" firstAttribute="top" secondItem="syD-cF-zbz" secondAttribute="bottom" constant="20" id="uRV-h2-pt4"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="35X-Uj-96g"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="color" keyPath="themeBackgroundColor">
+                                <color key="value" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
                     </view>
+                    <connections>
+                        <outlet property="addressLb" destination="u88-ZK-LQr" id="G28-LG-zPB"/>
+                        <outlet property="slider" destination="syD-cF-zbz" id="Va2-de-pad"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="L2q-eR-98Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="271" y="-216"/>
         </scene>
     </scenes>
+    <resources>
+        <namedColor name="errorText">
+            <color red="1" green="0.0" blue="0.31372549019607843" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
